<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddActivity">



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Basics"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="Back" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="Next" />




    <!-- BASIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIICS -->

    <RelativeLayout
        android:id="@+id/basicRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title">

        <include
            android:id="@+id/card_view_photos_id"
            layout="@layout/edit_basics" />


    </RelativeLayout>

    <!-- DETAIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIILS -->


    <RelativeLayout
        android:id="@+id/detailRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <include
            android:id="@+id/card_view_photos_id"
            layout="@layout/edit_details" />

    </RelativeLayout>
    <!-- CHARACTARISTIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIICS -->

    <RelativeLayout
        android:id="@+id/charaRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <include
            android:id="@+id/card_view_photos_id"
            layout="@layout/edit_characs" />
    </RelativeLayout>

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>


    <!--<android.support.v7.widget.RecyclerView--><!--android:id="@+id/recyclerViewPOI"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/pointsOfInterestET"--><!--android:layout_centerHorizontal="true"--><!--android:textAlignment="center" />-->