<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/descriptionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/descriptionTV"
        android:layout_alignBottom="@id/descriptionTV"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/descriptionTV"
        android:src="@drawable/ic_description_black_24dp" />


    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="House description:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTV"
        android:layout_margin="15dp"
        android:imeOptions="actionDone"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/locationTV"
        android:layout_alignBottom="@+id/locationTV"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/locationTV"
        android:src="@drawable/ic_location_on_black_24dp" />


    <TextView
        android:id="@+id/locationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionET"
        android:layout_centerHorizontal="true"
        android:text="House address:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/locationET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTV"
        android:layout_margin="15dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/sidePicturesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationET"
        android:layout_centerHorizontal="true"
        android:text="Additional pictures:*"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addAPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sidePicturesTV"
        android:layout_centerHorizontal="true"
        android:text="Add a picture" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sidePicturesIV"
        android:layout_alignBottom="@+id/sidePicturesIV"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/sidePicturesIV"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/sidePicturesIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/addAPictureButton"
        android:layout_alignBottom="@+id/addAPictureButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/addAPictureButton" />

    <EditText
        android:id="@+id/photoDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addAPictureButton"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="Image description"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photoDescriptionET"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="Add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/horizontalRecyclerViewAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addButton" />
</RelativeLayout>