...
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Surface (m²)*:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/surfaceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/surfaceTV"
        android:layout_margin="15dp"
        android:imeOptions="actionDone"
        android:inputType="number"
...
